<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_blue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_text"
        android:textColor="@color/black_overlay"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/black_overlay"
        android:ems="10"
        android:hint="@string/enterTextBox"
        android:inputType="textMultiLine"
        android:textColor="@color/white_overlay"
        android:textColorLink="@color/white_overlay" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/generateTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/backgroud_blue"
        android:text="@string/generate"
        android:textColor="@color/black_overlay"
        android:textStyle="bold" />

    <Button
        android:id="@+id/backSTButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginRight="40dp"
        android:layout_marginTop="-50dp"
        android:background="@color/backgroud_blue"
        android:text="@string/back" 
        android:textColor="@color/black_overlay"
        android:textStyle="bold"
    />

</LinearLayout>