<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayMessageActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/qrMade"
        android:textColor="@color/black_overlay"
        android:textColorLink="@color/black_overlay"
        android:textSize="20sp"
        android:visibility="invisible"
     />

    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/imageDescr" />
    
        <Button
        android:id="@+id/saveQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/qrCode"
        android:text="@string/save"
        android:textStyle="bold" 
        android:background="@android:color/transparent"
    />

    <Button
        android:id="@+id/backDMButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/qrCode"
        android:layout_marginRight="28dp"
        android:text="@string/back"
        android:textStyle="bold" 
        android:background="@android:color/transparent"
    />
    
</RelativeLayout>