<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#0099cc"  
	>

    <ImageButton
        android:id="@+id/backGMButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@drawable/back_button"
        android:background="@android:color/transparent"
    />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gen_instruction"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginTop="10dp"
        android:textStyle="bold"
       	android:textColor="@color/black_overlay"
    />

    <Button
        android:id="@+id/textButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/backgroud_blue"
        android:gravity="center"
        android:onClick="enterText"
        android:shadowColor="@color/black_overlay"
        android:shadowRadius="10"
        android:text="@string/text"
        android:textColor="@color/white_overlay"
        android:textStyle="bold" />

    <Button
        android:id="@+id/urlButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/backgroud_blue"
        android:gravity="center"
        android:onClick="sendToast"
        android:shadowColor="@color/black_overlay"
        android:shadowRadius="10"
        android:text="@string/url"
        android:textColor="@color/white_overlay"
        android:textStyle="bold" />

    <Button
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/backgroud_blue"
        android:gravity="center"
        android:onClick="sendToast"
        android:shadowColor="@color/black_overlay"
        android:shadowRadius="10"
        android:text="@string/image"
        android:textColor="@color/white_overlay"
        android:textStyle="bold" />

    <Button
        android:id="@+id/phoneNoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/backgroud_blue"
        android:gravity="center"
        android:onClick="sendToast"
        android:shadowColor="@color/black_overlay"
        android:shadowRadius="10"
        android:text="@string/phnumber"
        android:textColor="@color/white_overlay"
        android:textStyle="bold" />

</LinearLayout>