<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ActivityMain" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="@color/black_overlay"
        android:textIsSelectable="true"
        android:textStyle="bold" />

<!--   	android:text="@string/Hello_World"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold"
-->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
<!-- 
            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:onClick="sendMessage"
                android:text="@string/dummy_button" />
-->
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/backgroud_blue"
            android:text="@string/generate"
            android:textSize="40sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="bottom"
            android:background="@color/backgroud_blue"
            android:text="@string/scan"
            android:textSize="40sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/backgroud_blue"
            android:onClick="activateButtons"
            android:text="@string/Hello_World"
            android:textColor="@color/black_overlay"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/second_string"
            android:textColor="@color/white_overlay"
            android:textColorLink="@color/white_overlay"
            android:textSize="20sp" />

        <View
            android:id="@+id/lineSp1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="250dp"
            android:background="@color/black_overlay"
            android:visibility="invisible" />

        <View
            android:id="@+id/lineSp2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="250dp"
            android:background="@color/black_overlay"
            android:visibility="invisible" />

        <Button
            android:id="@+id/infoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@android:color/transparent"
            android:text="i"
            android:textColor="@color/white_overlay"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

    </FrameLayout>

</FrameLayout>